ssl/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
     kubernetes.io/ingress.class: "nginx"
     #cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - hosts:
    - kakaroto.work 
    secretName: my-secret-tls 

  rules:
  - host: "kakaroto.work"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc-kakaroto
            port:
             number: 8080   #puerto de la aplicacion

  - host: "tonydev.me"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc-me
            port:
             number: 8090
